--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_mlkit_text_recognition: ^0.15.0
   image_picker: ^1.2.0
   flutter_spinkit: ^5.2.2
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
