--- a/Application/pubspec.yaml
+++ b/Application/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.2.0
   flutter_spinkit: ^5.2.2
   google_fonts: ^6.3.2
+  supabase_flutter: ^2.10.3
 
 dev_dependencies:
   flutter_test:
