--- a/Application/android/app/src/main/AndroidManifest.xml
+++ b/Application/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="io.supabase.flutter" android:host="login-callback" />
                 <data android:scheme="io.supabase.flutter" android:host="reset-callback" />
             </intent-filter>
             <intent-filter>
