--- a/Application/pubspec.yaml
+++ b/Application/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_spinkit: ^5.2.2
   google_fonts: ^6.3.2
   supabase_flutter: ^2.10.3
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
