--- a/Application/pubspec.yaml
+++ b/Application/pubspec.yaml
@@ -44,8 +44,7 @@ dependencies:
   fl_chart: ^1.1.1
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -95,3 +94,5 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+dependency_overrides:
+  vector_math: 2.2.0
