--- a/Application/pubspec.yaml
+++ b/Application/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^6.3.2
   supabase_flutter: ^2.10.3
   fl_chart: ^1.1.1
+  speech_to_text: ^7.3.0
 
 dev_dependencies:
 
