--- a/Application/pubspec.yaml
+++ b/Application/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   fl_chart: ^1.1.1
   get_storage: ^2.1.1
   speech_to_text: ^7.3.0
-  intl: ^0.20.2 
+  intl: ^0.20.2
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
 
